--- a/src/scss/mixin.scss
+++ b/src/scss/mixin.scss
@@ -24,3 +24,13 @@
     box-shadow: 0 0 15px $pink-color;
   }
 }
+
+@mixin gradient {
+  background-image: linear-gradient(to right, transparent, $light-gray-color);
+  position: absolute;
+  z-index: 3;
+  width: 24px;
+  right: 0;
+  border-color: transparent;
+  content: '';
+}
