--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,7 +12,7 @@
 @import 'services.scss';
 @import 'navigation.scss';
 
-@import 'brends.scss';
+@import 'brands.scss';
 @import 'techTypes.scss';
 @import 'price.scss';
 @import 'card.scss';
